--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,6 +1,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
+{% load custom_tags %}
 
 {% block title %}
 Posts
@@ -8,9 +9,16 @@ Posts
 
 {% block content %}
    <h1>Всего новостей: {{posts|length}}</h1>
-<h3>{{ time_now|date:'d M Y' }}</h3>
+<h3>{% current_time '%b %d %Y' %}</h3>
 <h3> {{ next_post|default_if_none:"Чуть позже сообщим о новых постах!" }} </h3>
    <hr>
+ <form action="" method="get">
+       {{ filterset.form.as_p }}
+       <input type="submit" value="Найти" />
+   </form>
+
+   <hr>
+
    {% if posts %}
        <table>
            <tr>
@@ -40,4 +48,24 @@ Posts
    {% else %}
        <h2>Новостей нет!</h2>
    {% endif %}
+   {# Информация о предыдущих страницах #}
+   {% if page_obj.has_previous %}
+       <a href="?{% url_replace page=1 %}">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {{ page_obj.number }}
+
+   {% if page_obj.has_next %}
+       <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
 {% endblock content %}
+
