--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,11 +1,11 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h1>Новость</h1>
+<h1>Удаление</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save" />
+    <p>Удаляем "{{ object.title }}"?</p>
+    <input type="submit" value="Delete" />
 </form>
 {% endblock content %}
